--- a/src/Pages/BestPage/BestPage.scss
+++ b/src/Pages/BestPage/BestPage.scss
@@ -5,51 +5,48 @@
 .bestPage {
   // background-color: royalblue;
   text-align: center;
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 700;
   padding: 20px 0;
   border-bottom: 1px solid black;
 }
 
 .bestPageTop {
-  padding: 10px 5px;
+  padding: 20px 5px;
   background-color: white;
   box-shadow: 5px 5px 7px lightgray;
-
-  font-size: 8px;
+  font-size: 20px;
 }
 
 .bestPageProducts {
   display: grid;
   grid-template-columns: repeat(3, calc((100% - 100px) / 3));
   grid-gap: 50px;
-  // background-color: yellow;
   margin-top: 20px;
 
   .productImg {
-    height: 250px;
+    height: 400px;
     background-size: cover;
     background-position: center;
     border-radius: 8px;
   }
   .mainName {
-    margin-top: 10px;
-    font-size: 10px;
+    margin-top: 25px;
+    font-size: 15px;
   }
   .mainPrice {
     margin-top: 5px;
-    font-size: 13px;
+    font-size: 18px;
     font-weight: 700;
   }
   .mainAmount {
     display: flex;
-    margin-top: 8px;
-    font-size: 7px;
+    justify-content: space-between;
+    margin-top: 15px;
+    font-size: 13px;
 
     .postscript {
-      // justify-content: flex-end;
-      margin-left: 50px;
-      font-size: 10px;
+      font-size: 13px;
       color: red;
     }
   }
