--- a/src/Pages/CenterPage/CenterPage.scss
+++ b/src/Pages/CenterPage/CenterPage.scss
@@ -24,7 +24,6 @@
   position: relative;
 }
 .happyBox {
-  width: 450px;
   height: 300px;
   background-size: cover;
   background-position: center;
@@ -50,9 +49,19 @@
   border-radius: 10px;
 }
 .centerBanner {
-  height: 200px;
-  margin-top: 30px;
+  height: 250px;
+  margin-top: 40px;
   background-size: cover;
   background-position: center;
   border-radius: 10px;
+}
+
+.todayHotDeal {
+  display: flex;
+  justify-content: center;
+  margin: 70px 0 30px 0;
+  .todayHotDealText {
+    font-size: 27px;
+    font-weight: 800;
+  }
 }
