--- a/src/Pages/CenterPage/CenterPage.scss
+++ b/src/Pages/CenterPage/CenterPage.scss
@@ -16,8 +16,8 @@
 }
 .happyExhivition {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;
+  grid-template-columns: repeat(3, calc((100% - 60px) / 3));
+  grid-gap: 50px;
 }
 .exhibition {
   display: flex;
