--- a/src/Pages/CenterPage/CenterPage.scss
+++ b/src/Pages/CenterPage/CenterPage.scss
@@ -59,9 +59,51 @@
 .todayHotDeal {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   margin: 70px 0 30px 0;
+  overflow: hidden;
+
   .todayHotDealText {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
     font-size: 27px;
     font-weight: 800;
+  }
+  .todayHotDealInfo {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    align-items: center;
+    width: 900px;
+
+    .todayHotDealImgBox {
+      display: flex;
+      justify-content: center;
+      width: 80%;
+    }
+    .todayHotDealImg {
+      width: 300px;
+      height: 100px;
+      justify-content: center;
+      background-position: center;
+      background-size: cover;
+    }
+  }
+}
+.arrowBox {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  margin-bottom: 10px;
+  .fa-arrow-left {
+    position: absolute;
+    color: lightgreen;
+  }
+  .fa-arrow-right {
+    position: absolute;
+    color: orange;
+    right: 0;
   }
 }
